Fixed m-surefire-p configuration for JPMS.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>